# Lumen

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LUMEN_REPORT.md  README.md  cargo.toml  readme.md
.github/workflows/: ci.yml  release.yml
crates/lumen-cli/: Cargo.toml
crates/lumen-cli/src/: main.rs
crates/lumen-codegen/: Cargo.toml
crates/lumen-codegen/src/: bytecode.rs  codegen.rs  disasm.rs  lib.rs
crates/lumen-codegen/tests/: proptest.rs
crates/lumen-ir/: Cargo.toml
crates/lumen-ir/src/: builder.rs  ir.rs  lib.rs
crates/lumen-lexer/: Cargo.toml
crates/lumen-lexer/src/: error.rs  lexer.rs  lib.rs  token.rs
crates/lumen-parser/: Cargo.toml
crates/lumen-parser/src/: ast.rs  error.rs  lib.rs  parser.rs
crates/lumen-sema/: Cargo.toml
crates/lumen-sema/src/: error.rs  lib.rs  loader.rs  sema.rs
crates/lumen-vm/: Cargo.toml
crates/lumen-vm/src/: lib.rs  value.rs  vm.rs
crates/lumen-vm/tests/: e2e.rs
docs/: BYTECODE.md  ESTRUCTURA.md  GUIA DE USO.md  Reporte-v0.1.md  V0.1.md  architecture.md  cli.md  contributing.md  language.md  roadmap.md
docs/spec/: bytecode-format.md  error-codes.md  grammar.ebnf  vm-spec.md
examples/: arrays.nv  break.nv  condicional.nv  continue.nv  destructuring.nv  enums.nv  foreach.nv  func.nv  genericos.nv  hello.nv  lambda.nv  loop.nv  match.nv  math.nv  opcion.nv  params_default.nv  resultado.nv  structs.nv  test_bool.nv  test_bool_var.nv  test_if.nv  test_if2.nv  test_if3.nv  test_if4.nv  test_import.nv  test_math_abs.nv  test_math_only.nv  test_math_potencia.nv  test_math_raiz.nv  test_math_simple.nv  test_simple_import.nv  test_simple_import2.nv  test_stdlib.nv  test_stdlib_mini.nv  tuplas.nv  utils.nv
src/: instructions.rs  main.rs  vm.rs
src/cli/: commands.rs  mod.rs
src/compiler/: ast.rs  codegen.rs  keywords.rs  lexer.rs  mod.rs  parser.rs
src/vm/: constant_pool.rs  decoder.rs  loader.rs  mod.rs  value.rs  verifier.rs  verifier_tests.rs  vm.rs
stdlib/: archivos.nv  coleccion.nv  fecha.nv  matematicas.nv  simple_test.nv  simple_test2.nv  texto.nv
test_agents/: 01_hello.nv  02_vars.nv  03_functions.nv  04_strings.nv  05_arrays.nv  06_ifelse.nv  07_loops.nv  08_foreach.nv  09_structs.nv  10_stdlib.nv  J01_hello_world.nv  J02_variables.nv  J03_aritmetica.nv  J04_if_else.nv  J05_while.nv  J06_for.nv  J07_foreach.nv  J08_funciones.nv  J09_strings.nv  J10_arrays.nv  J11_booleanos.nv  J12_comentarios.nv  J13_anidados.nv  J14_tipos.nv  J15_multi_func.nv  S01_recursion.nv  S02_call_nested.nv  S03_resultado.nv  S04_opcion.nv  S05_enums.nv  S06_tuplas.nv  S07_destructuring.nv  S08_genericos.nv  S09_structs.nv  S10_closures.nv  S11_default_params.nv  S12_stdlib.nv  S13_file_io.nv  S14_data_structures.nv  S15_edge_cases.nv  (+4 more)
tests/: integration_test.rs
