[package]
name = "lumen-codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Generación de bytecode .nvc para el lenguaje LÚMEN — compiler backend"
keywords = ["lumen", "language", "bytecode", "codegen", "educational"]

[dependencies]
lumen-ir = { path = "../lumen-ir" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest = "1"
